# dynamind-finance-slm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt  setup.py
.iter/: STATE.json  check_bad_inserts.py  debug_discrete.py  debug_final.py  debug_grpo_act.py  debug_random.py  debug_reward.py  debug_reward2.py  debug_reward_components.py  debug_trace.py  fix_all_imports.py  fix_imports_robust.py  fix_imports_v2.py  fix_missing_imports.py  progress.txt  run_grpo.py  run_grpo_final.py  run_grpo_full.py  run_grpo_v2.py  run_grpo_v3.py  run_grpo_v4.py  test_config.py  test_grpo.py  verify_phase1_imports.py
.iter/plans/: PLAN-current.md
agents/: __init__.py  qwen_rl_agent.py
analysis/: ablation_runner.py  ablation_study.py  baseline_comparison.py  changepoint_analysis.py  changepoint_analysis_report.md  compare_100k_50k_results.py  comprehensive_evaluation.py  confidence_intervals_analysis.py  effect_size_validation.py  final_consolidation_validation.py  meta_learning_analysis.py  meta_learning_validation_pipeline.py  negative_controls_validation.py  paper_metrics.py  paper_trading_backtest.py  qwen_rl_vs_baseline_comparison.py  simple_ablation.py
archive/: placeholder.txt
archive/import_fixes/: fix_broken_imports.py  fix_imports.py  restore_imports.py
config/: loader.py  training_defaults.yaml
data/: __init__.py  data_manager.py  preprocessors.py  sources.py  synthetic.py  validators.py
docs/: CHANGELOG.md  CONTRIBUTING.md  OSS_PREPARATION_SUMMARY.md  README_OSS.md  README_QWEN_RL.md  baseline_comparison_final_report.md  paper_trading_final_report.md  qwen_rl_research_paper.md  qwen_rl_research_paper_enhanced.md  qwen_rl_vs_baseline_final_report.md
docs/research_backups/confidence_analysis/: confidence_intervals_analysis_report.md
docs/research_backups/effect_validation/: validation_summary.json
docs/research_backups/pipeline_results/: validation_pipeline_report.md
docs/research_backups/publication_package/: manuscript_structure.md  submission_checklist.md
environments/: __init__.py  base_env.py  kronos_wrapper.py  market_making.py  portfolio.py  regime_detection.py  single_asset.py
environments/market_microstructure/: __init__.py  execution_env.py  lob_simulator.py  market_making_env.py
evaluation/: __init__.py
examples/: basic_usage.py
financial_trading_gym/: __init__.py
models/: MODEL_CARD.md  MODEL_CATALOG.md  __init__.py
research_paper/: README.md  financial_trading_rl_gym.tex  meta_learning_consolidation_paper.md  references.bib  supplementary_materials.tex
risk/: __init__.py  constraints.py  cvar_reward_shaper.py  portfolio_metrics.py  risk_manager.py
scripts/: cleanup.py  setup_qwen_rl.py
tests/: quick_test.py
tests/integration/: test_real_data.py  test_risk_management.py  test_training_pipeline.py  test_training_simple.py
tests/models/: test_meta_learning_validation.py  test_qwen_advanced.py  test_qwen_vs_baseline.py
tests/unit/: test_gym.py  test_market_microstructure.py  test_package.py  test_package_simple.py  test_risk_clean.py  test_risk_direct.py  test_risk_simple.py
training/: __init__.py  curriculum.py  dpo_trainer.py  experiment_tracker.py  extended_training.py  financial_pretraining.py  hyperparameter_tuner.py  kronos_training.py  model_evaluator.py  model_export.py  model_sweep.py  multi_asset_training.py  multi_seed_training.py  multi_task_agent.py  offline_trainer.py  online_trainer.py  reward_model.py  rlhf_alignment.py  run_qwen_rl_training.py  start_training.py  supervised_finetuning.py  train_qwen.py
